--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Hema Lalitha Kothapalli
-#logo: /assets/img/MyPhoto.jpeg
+logo: /assets/img/MyPhoto.jpeg
 #description: text below image
 show_downloads: false
 theme: jekyll-theme-cayman
