--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Hema Lalitha Kothapalli
 logo: /assets/img/MyPhoto.jpeg
 #description: text below image
 show_downloads: false
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
